[tool.poetry]
name = "GQLAlchemy"
version = "1.5.0"

description = "GQLAlchemy is a library developed to assist with writing and running queries in Memgraph."
repository = "https://github.com/memgraph/gqlalchemy"
authors = [
  "Josip Mrden <josip.mrden@memgraph.com>",
  "Katarina Supe <katarina.supe@memgraph.com>",
  "Andi Skrgat <andi.skrgat@memgraph.com>",
  "Ante Pusic <ante.pusic@memgraph.com>",
]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "gqlalchemy" }]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dependencies]
python = "^3.8"
pymgclient = "1.3.1"
networkx = "^2.5.1"
pydantic = "2.3.0"
psutil = "^5.9.0"
dacite = "^1.6.0"
adlfs = "^2023.9.0"
neo4j = ">=4.4.3"
numpy = "^1.24.1"

pyarrow = { version = "^13.0.0", optional = true }
torch = { version = "^1.13.1", optional = true }
dgl = { version = "^0.9.1", optional = true }
docker = { version = "^6.1.3", optional = true }

[tool.poetry.extras]
arrow = ["pyarrow"]
dgl = ["torch", "dgl"]
all = ["pyarrow", "torch", "dgl", "docker"]
torch_pyg = ["torch"]
docker = ["docker"]

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pytest-black = "^0.3.12"
pytest-cov = "^2.12.0"
pytest-flake8 = "1.0.7"
pytest-timeout = "^1.4.2"
pre-commit = "^2.15.0"

[tool.poe.tasks]
install-pyg-cpu = "pip install torch-scatter torch-sparse torch-cluster torch-spline-conv torch-geometric -f https://data.pyg.org/whl/torch-1.13.0+cpu.html"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
