[project]
name = "GQLAlchemy"
version = "1.8.0"
description = "GQLAlchemy is a library developed to assist with writing and running queries in Memgraph."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Katarina Supe", email = "katarina.supe@memgraph.io" },
    { name = "Andi Skrgat", email = "andi.skrgat@memgraph.io" },
    { name = "Josip Mrden", email = "josip.mrden@memgraph.io" },
]
dependencies = [
    "pymgclient>=1.5.1,<2.0.0",
    "networkx>=2.5.1,<4.0.0",
    "pydantic>=2.3.0,<3.0.0",
    "psutil>=5.9,<7.0",
    "dacite>=1.6.0,<2.0.0",
    "adlfs>=2023.9.0,<2025.0.0",
    "neo4j>=4.4.3,<6.0.0",
    "numpy>=1.26.4,<3.0",
    "pandas<=2.2.3",
    "tensorflow==2.16.2",
]

[project.optional-dependencies]
arrow = ["pyarrow>=16,<17"]
tfgnn = [
    "tensorflow-gnn>=1.0.0,<2.0.0",
    "tensorflow==2.16.2",
    "tf-keras>=2.16,<3.0",
]
dgl = ["torch>=2.4,<3.0"]
dot = ["pydot>=1.4.2,<5.0.0"]
torch_pyg = ["torch>=2.4,<3.0"]
docker = ["docker>=6.1.3,<7.0.0"]
all = [
    "pyarrow>=16,<17",
    "torch>=2.4,<3.0",
    "docker>=6.1.3,<7.0.0",
    "tensorflow-gnn>=1.0.0,<2.0.0",
    "pydot>=1.4.2,<5.0.0",
]

[project.urls]
Repository = "https://github.com/memgraph/gqlalchemy"

[dependency-groups]
dev = [
    "black>=22.3.0,<25.0.0",
    "pytest-black>=0.3.12,<0.7.0",
    "pytest>=7.1.1,<9.0.0",
    "pytest-cov>=2.12.0,<4.0.0",
    "pytest-flake8>=1.0.7,<2.0.0",
    "flake8>=6.1.0,<7.0.0",
    "pytest-timeout>=1.4.2,<3.0.0",
    "pre-commit>=2.15.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gqlalchemy"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.uv]
constraint-dependencies = [
    # Older apache-beam versions fail to build with modern setuptools
    "apache-beam>=2.50.0",
]
